5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4491/executions/1635_2445.log
== TEST (2019-04-15 13:32:03) 
-- CODE:
t = input ("C ou F: ")
v= float(input("valor da temperatura: "))
c = (5 * v - 5 *32)/9
f = ((9*v/5) + 32)

if(t == "c"):
	print(round(f, 2))
else: 
	print(round(c, 2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:32:38) 
-- CODE:
t = input ("C ou F: ")
v= float(input("valor da temperatura: "))
c = (5 * v - 5 *32)/9
f = ((9*v/5) + 32)

if(t == "c"):
	print(round(f, 2))
else: 
	print(round(c, 2))
-- EXECUTION TIME:
0.182631
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:33:21) 
-- CODE:
t = input("C ou F: ")
v= float(input("valor da temperatura: "))
c = (5 * v - 5 *32)/9
f = ((9*v/5) + 32)

if(t == "c"):
	print(round(f, 2))
else: 
	print(round(c, 2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:33:32) 
-- CODE:
t = input("C ou F: ")
v= float(input("valor da temperatura: "))
c = (5 * v - 5 *32)/9
f = ((9*v/5) + 32)

if(t == "c"):
	print(round(f, 2))
else: 
	print(round(c, 2))
-- EXECUTION TIME:
0.215766
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:33:52) 
-- CODE:
t = input("c ou f: ")
v= float(input("valor da temperatura: "))
c = (5 * v - 5 *32)/9
f = ((9*v/5) + 32)

if(t == "c"):
	print(round(f, 2))
else: 
	print(round(c, 2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:34:00) 
-- CODE:
t = input("c ou f: ")
v= float(input("valor da temperatura: "))
c = (5 * v - 5 *32)/9
f = ((9*v/5) + 32)

if(t == "c"):
	print(round(f, 2))
else: 
	print(round(c, 2))
-- EXECUTION TIME:
0.173444
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:34:12) 
-- CODE:
t = input("c ou f: ")
v = float(input("valor da temperatura: "))
c = (5 * v - 5 *32)/9
f = ((9*v/5) + 32)

if(t == "c"):
	print(round(f, 2))
else: 
	print(round(c, 2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:34:22) 
-- CODE:
t = input("c ou f: ")
v = float(input("valor da temperatura: "))
c = (5 * v - 5 *32)/9
f = ((9*v/5) + 32)

if(t == "c"):
	print(round(f, 2))
else: 
	print(round(c, 2))
-- EXECUTION TIME:
0.186423
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:35:10) 
-- CODE:
T = input("C ou F: ")
V = float(input("valor da temperatura: "))
C = (5 * V - 5 *32)/9
F = ((9*V/5) + 32)

if(t == "C"):
	print(round(F, 2))
else: 
	print(round(C, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if(t == "C"):
NameError: name 't' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:35:31) 
-- CODE:
T = input("C ou F: ")
V = float(input("valor da temperatura: "))
C = (5 * V - 5 *32)/9
F = ((9*V/5) + 32)

if(T == "C"):
	print(round(F, 2))
else: 
	print(round(C, 2))
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:35:47) 
-- CODE:
T = input("C ou F: ")
V = float(input("valor da temperatura: "))
C = (5 * V - 5 *32)/9
F = ((9*V/5) + 32)

if(T == "C"):
	print(round(F, 2))
else: 
	print(round(C, 2))
-- EXECUTION TIME:
0.163932
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
